--- a/index.html
+++ b/index.html
@@ -20,24 +20,50 @@
     <button onclick="showTab('about')">About</button>
     <button onclick="showTab('skills')">Skills</button>
     <button onclick="showTab('projects')">Projects</button>
-    <button onclick="showTab('contact')">Contact</button>
   </nav>
 
   <main>
     <section id="about" class="tab active">
-      <h3>About Me</h3>
-      <p>I blend user research with data analytics to drive business transformation. Passionate about building user-focused digital experiences and automating workflows using no-code tools.</p>
+      <h3>Professional Summary</h3>
+      <p>Experienced Product Manager with 3.7 years of experience leading high-impact digital solutions across B2B and B2C domains. Known for blending user research with data analytics to drive business transformation.</p>
+
+      <h3>Product and Technical Experience</h3>
+      <ul>
+        <li><strong>Spacematrix:</strong> Built multi-region project platform, synced Zoho Analytics with BigQuery, led UI/UX for dashboard tools, integrated LLMs, and rolled out system-wide training.</li>
+        <li><strong>Pharmeasy / Aknamed:</strong> Cut costs by 7%, enhanced product quality and sales through sustainable engineering, and redesigned products based on trends.</li>
+        <li><strong>Ghack (E-War):</strong> Scaled user base 45% using Python+GA; ran acquisition campaigns.</li>
+        <li><strong>Swiggy:</strong> Reduced delivery time by 30%, improved CRM and customer satisfaction through analytics.</li>
+      </ul>
+
+      <h3>Education</h3>
+      <p><strong>B.Tech in Electronics & Communication</strong> – CMR University, Bangalore (2020)</p>
+
+      <h3>Contact</h3>
+      <p>Email: <a href="mailto:bnickam@gmail.com">bnickam@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/barath-mn-21828b199/" target="_blank">Barath MN</a></p>
     </section>
 
     <section id="skills" class="tab">
-      <h3>Skills</h3>
+      <h3>Core Competencies</h3>
+      <ul>
+        <li>Product Strategy & Execution</li>
+        <li>AI Prompt Engineering & Automation</li>
+        <li>No-Code Platforms: Zoho Creator, n8n, Airtable</li>
+        <li>UI/UX Wireframing & Development</li>
+        <li>Data Analysis & Visualization</li>
+        <li>Agile / Scrum, Jira & Plane.so</li>
+        <li>Stakeholder & Client Communication</li>
+        <li>BigQuery Reporting & API Integration</li>
+      </ul>
+
+      <h3>Technical Toolkit</h3>
       <ul>
         <li><strong>Languages:</strong> JavaScript, HTML/CSS, basic Python</li>
         <li><strong>Product Tools:</strong> JIRA, Figma, GA, Notion, Trello, HubSpot, Airtable</li>
         <li><strong>No-Code:</strong> Zoho Creator, n8n, Zapier, Plane.so, Typeform, Balsamiq</li>
         <li><strong>Integration:</strong> Stripe, PayPal</li>
         <li><strong>Reporting:</strong> BigQuery, Zoho Analytics</li>
-        <li><strong>Docs:</strong> BRD, PRD, FRD, SAD</li>
+        <li><strong>Documentation:</strong> BRD, PRD, FRD, SAD</li>
       </ul>
     </section>
 
@@ -46,12 +72,6 @@
       <ul>
         <li><strong>Invoice/Voucher Generator:</strong> Generates a printable invoice format. <a href="projects/invoice.html">View Demo</a></li>
       </ul>
-    </section>
-
-    <section id="contact" class="tab">
-      <h3>Contact</h3>
-      <p>Email: <a href="mailto:bnickam@gmail.com">bnickam@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/barath-mn-21828b199/" target="_blank">Barath MN</a></p>
     </section>
   </main>
 
