--- a/index.html
+++ b/index.html
@@ -29,10 +29,29 @@
 
       <h3>Product and Technical Experience</h3>
       <ul>
-        <li><strong>Spacematrix:</strong> Built multi-region project platform, synced Zoho Analytics with BigQuery, led UI/UX for dashboard tools, integrated LLMs, and rolled out system-wide training.</li>
-        <li><strong>Pharmeasy / Aknamed:</strong> Cut costs by 7%, enhanced product quality and sales through sustainable engineering, and redesigned products based on trends.</li>
-        <li><strong>Ghack (E-War):</strong> Scaled user base 45% using Python+GA; ran acquisition campaigns.</li>
-        <li><strong>Swiggy:</strong> Reduced delivery time by 30%, improved CRM and customer satisfaction through analytics.</li>
+        <li><strong>Spacematrix:</strong> 
+Designed and rolled out a multi-region project management platform (Singapore,China, Manila).
+Built dashboards: Project Overview, Timesheet Compliance, and ProjectManagement.
+Delivered reports: Project Closure, Billing, NPS, DLP Status, and Resource Tagging.
+Integrated Zoho Analytics with BigQuery via API sync scripts.
+Led UI/UX design for Planned Cash Flow, Project Compliance, Internal Detail Design.
+Conducted UAT, stakeholder demos, and training sessions.
+Implemented Workplace DNA survey analysis with radar chart & LLM-based summary generation.
+Coordinated with Zoho on bugs, components, and rollout requirements.
+Managed bi-weekly platform releases and end-to-end QA testing.
+Initiated Blink setup in Airtable and implemented Plane.so for internal use.</li>
+        <li><strong>Pharmeasy / Aknamed:</strong> 
+Managed contracts with suppliers, achieving a 7% average reduction in manufacturing costs.
+Collaborated with engineering teams to incorporate sustainable materials,reducing production waste by 50%.
+Boosted annual sales by 15% through development of user-centric product features based on customer feedback.
+Analyzed market trends and redesigned underperforming products, resultingin a 20% sales increase.</li>
+        <li><strong>Ghack (E-War):</strong> 
+Improved onboarding using Python & GA; boosted user base by 45%.
+Worked on engagement and acquisition via Google Ads/Facebook campaigns.</li>
+        <li><strong>Swiggy:</strong> 
+Optimized food delivery efficiency, reaching 78% market penetration.
+Used data analytics to reduce delivery time by 30%.
+Enhanced customer satisfaction via CRM and process optimization.</li>
       </ul>
 
       <h3>Education</h3>
