--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="profile.jpg" alt="Barath MN" class="profile-pic"/>
+    <img src="1676746409950.jpeg" alt="Barath MN" class="profile-pic"/>
     <h1>Barath MN</h1>
     <h2>Product Manager</h2>
     <p>Experienced Product Manager with 3.7 years of experience leading high-impact digital solutions across B2B and B2C domains. Strong track record in full-cycle product delivery, cross-regional platform rollouts, and integration of AI and low-code platforms.</p>
