--- a/invoice.html
+++ b/invoice.html
@@ -1,12 +1,9 @@
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Invoice Generator</title>
-</head>
+<html>
+<head><title>Invoice Generator</title></head>
 <body>
-  <h1>Invoice Generator (Placeholder)</h1>
-  <p>This will be replaced by your functional invoice generation tool.</p>
+  <h1>Invoice Generator</h1>
+  <p>This tool will generate invoices in future version.</p>
 </body>
 </html>
