--- a/index.html
+++ b/index.html
@@ -3,85 +3,53 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Barath MN - Product Manager</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header class="hero">
-    <h1>Barath MN</h1>
+    <h1>Hi, I'm Barath MN</h1>
     <p class="subtitle">Product Manager | No-Code Builder | Digital Strategist</p>
-    <p class="summary">
-      Experienced Product Manager with 3.7 years of experience leading high-impact digital solutions across B2B and B2C domains. Strong track record in full-cycle product delivery, cross-regional platform rollouts, and integration of AI and low-code platforms.
-    </p>
     <a class="btn" href="resume.pdf" download>Download Resume</a>
   </header>
 
   <section class="section">
-    <h2>Product & Technical Experience</h2>
-    <div class="experience">
-      <h3>Spacematrix Design Consultants Pvt Ltd (Nov 2023 – Present)</h3>
-      <p>Technical Product Analyst</p>
-      <ul>
-        <li>Built multi-region project management platforms (Singapore, China, Manila).</li>
-        <li>Integrated Zoho Analytics with BigQuery via API scripts.</li>
-        <li>Led dashboards, UI/UX design, LLM summary integration, and QA releases.</li>
-      </ul>
-
-      <h3>Pharmeasy / Aknamed Pvt Ltd (Jun 2021 – Jun 2023)</h3>
-      <p>Technical Project Analyst</p>
-      <ul>
-        <li>Reduced costs by 7%, boosted sales by 15%, improved sustainability and UX.</li>
-      </ul>
-
-      <h3>Ghack Technology (E-War) (Nov 2019 – Feb 2020)</h3>
-      <p>Technical Business Analyst Intern</p>
-      <ul>
-        <li>Improved onboarding with Python & GA, scaled user base by 45%.</li>
-      </ul>
-
-      <h3>Swiggy (Aug 2019 – Nov 2019)</h3>
-      <p>Technical Business Analyst Intern</p>
-      <ul>
-        <li>Optimized food delivery, cut delivery time by 30%, improved customer satisfaction.</li>
-      </ul>
-    </div>
+    <h2>About Me</h2>
+    <p>Experienced Product Manager with 3.7 years of experience leading high-impact digital solutions across B2B and B2C domains. Specialized in full-cycle delivery, automation, and AI integrations.</p>
   </section>
 
   <section class="section">
-    <h2>Skills & Technical Toolkit</h2>
-    <div class="skills">
-      <div>
-        <h4>Core Competencies</h4>
-        <ul>
-          <li>Product Strategy & Execution</li>
-          <li>AI Prompt Engineering & Automation</li>
-          <li>No-Code Platforms: Zoho Creator, n8n, Airtable</li>
-          <li>UI/UX Wireframing & Development</li>
-          <li>BigQuery Reporting & API Integration</li>
-          <li>Agile / Scrum, Jira & Plane.so</li>
-        </ul>
-      </div>
-      <div>
-        <h4>Technical Tools</h4>
-        <ul>
-          <li>Languages: JavaScript, HTML/CSS, basic Python</li>
-          <li>Tools: JIRA, Figma, Notion, Trello, HubSpot, Airtable</li>
-          <li>No-Code: Zapier, Plane.so, Typeform, Balsamiq</li>
-          <li>Integrations: Stripe, PayPal</li>
-          <li>Reporting: Zoho Analytics, BigQuery</li>
-          <li>Docs: BRD, PRD, FRD, SAD</li>
-        </ul>
-      </div>
-    </div>
+    <h2>Skills</h2>
+    <ul>
+      <li>Product Strategy & Execution</li>
+      <li>AI Prompt Engineering</li>
+      <li>No-Code Tools: Zoho Creator, n8n, Airtable</li>
+      <li>BigQuery, Zapier, API Integration</li>
+      <li>Documentation: BRD, PRD, FRD, SAD</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Experience</h2>
+    <h3>Spacematrix (Nov 2023 – Present)</h3>
+    <p>Built multi-region platform, dashboards, LLM summary generator, Zoho-BigQuery API.</p>
+
+    <h3>Pharmeasy / Aknamed (Jun 2021 – Jun 2023)</h3>
+    <p>Cut costs 7%, boosted sales 15%, revamped UX using market insights.</p>
+
+    <h3>Ghack Technology (E-War) (Nov 2019 – Feb 2020)</h3>
+    <p>Scaled user base 45% using Python & GA, ran ad campaigns.</p>
+
+    <h3>Swiggy (Aug 2019 – Nov 2019)</h3>
+    <p>Optimized logistics, reduced delivery time 30%, improved CRM.</p>
   </section>
 
   <section class="section">
     <h2>Education & Contact</h2>
-    <p><strong>B.Tech – Electronics & Communication</strong>, CMR University, Bangalore (2020)</p>
-    <p>Email: <a href="mailto:bnickam@gmail.com">bnickam@gmail.com</a></p>
-    <p>Phone: +91-9902879832</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/barath-mn-21828b199/" target="_blank">linkedin.com/in/barath-mn</a></p>
+    <p><strong>Education:</strong> B.Tech in Electronics & Communication, CMR University, Bangalore (2020)</p>
+    <p><strong>Email:</strong> <a href="mailto:bnickam@gmail.com">bnickam@gmail.com</a></p>
+    <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/barath-mn-21828b199" target="_blank">linkedin.com/in/barath-mn</a></p>
   </section>
 </body>
 </html>
