--- a/index.html
+++ b/index.html
@@ -9,47 +9,69 @@
 </head>
 <body>
   <header class="hero">
-    <h1>Hi, I'm Barath MN</h1>
-    <p class="subtitle">Product Manager | No-Code Builder | Digital Strategist</p>
+    <h1>BARATH MN</h1>
+    <p class="subtitle">Product Manager · No-Code Builder · Digital Strategist</p>
+    <p class="summary">
+      Product Manager with 3.7+ years experience across B2B and B2C tech domains. Proven track record of shipping AI-integrated solutions, automating workflows with no-code tools, and scaling product delivery across geographies.
+    </p>
     <a class="btn" href="resume.pdf" download>Download Resume</a>
   </header>
 
   <section class="section">
     <h2>About Me</h2>
-    <p>Experienced Product Manager with 3.7 years of experience leading high-impact digital solutions across B2B and B2C domains. Specialized in full-cycle delivery, automation, and AI integrations.</p>
+    <p>
+      I'm passionate about using design thinking, low-code platforms, and data analytics to solve business problems at scale. I’ve delivered measurable outcomes by integrating Zoho, BigQuery, and AI workflows, and thrive in fast-paced, cross-functional teams.
+    </p>
   </section>
 
   <section class="section">
     <h2>Skills</h2>
     <ul>
-      <li>Product Strategy & Execution</li>
-      <li>AI Prompt Engineering</li>
-      <li>No-Code Tools: Zoho Creator, n8n, Airtable</li>
-      <li>BigQuery, Zapier, API Integration</li>
+      <li>Product Strategy · AI Prompt Engineering · Agile / Scrum</li>
+      <li>No-Code Platforms: Zoho Creator, n8n, Zapier</li>
+      <li>Data Tools: BigQuery, Zoho Analytics · API Integration</li>
       <li>Documentation: BRD, PRD, FRD, SAD</li>
+      <li>UI/UX Tools: Figma, Balsamiq, Trello, Notion</li>
     </ul>
   </section>
 
   <section class="section">
     <h2>Experience</h2>
-    <h3>Spacematrix (Nov 2023 – Present)</h3>
-    <p>Built multi-region platform, dashboards, LLM summary generator, Zoho-BigQuery API.</p>
+    <h3>Spacematrix Design Consultants Pvt Ltd <span class="date">(Nov 2023 – Present)</span></h3>
+    <ul>
+      <li>Designed & deployed multi-region project platforms (Singapore, China, Manila)</li>
+      <li>Built dashboards and integrated Zoho with BigQuery using Python APIs</li>
+      <li>Led UI/UX for financial planning, project compliance & automated survey analysis</li>
+    </ul>
 
-    <h3>Pharmeasy / Aknamed (Jun 2021 – Jun 2023)</h3>
-    <p>Cut costs 7%, boosted sales 15%, revamped UX using market insights.</p>
+    <h3>Pharmeasy / Aknamed Pvt Ltd <span class="date">(Jun 2021 – Jun 2023)</span></h3>
+    <ul>
+      <li>Reduced manufacturing cost by 7% through supplier negotiation & analytics</li>
+      <li>Improved product adoption by 20% using feedback-driven feature redesigns</li>
+    </ul>
 
-    <h3>Ghack Technology (E-War) (Nov 2019 – Feb 2020)</h3>
-    <p>Scaled user base 45% using Python & GA, ran ad campaigns.</p>
+    <h3>Ghack Technology (E-War) <span class="date">(Nov 2019 – Feb 2020)</span></h3>
+    <ul>
+      <li>Scaled users by 45% using optimized onboarding and Google Ads targeting</li>
+    </ul>
 
-    <h3>Swiggy (Aug 2019 – Nov 2019)</h3>
-    <p>Optimized logistics, reduced delivery time 30%, improved CRM.</p>
+    <h3>Swiggy <span class="date">(Aug 2019 – Nov 2019)</span></h3>
+    <ul>
+      <li>Improved delivery efficiency and reduced SLA by 30% using CRM data analytics</li>
+    </ul>
   </section>
 
   <section class="section">
-    <h2>Education & Contact</h2>
-    <p><strong>Education:</strong> B.Tech in Electronics & Communication, CMR University, Bangalore (2020)</p>
-    <p><strong>Email:</strong> <a href="mailto:bnickam@gmail.com">bnickam@gmail.com</a></p>
-    <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/barath-mn-21828b199" target="_blank">linkedin.com/in/barath-mn</a></p>
+    <h2>Education</h2>
+    <p><strong>B.Tech in Electronics & Communication</strong> – CMR University, Bangalore (2020)</p>
   </section>
+
+  <section class="section">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:bnickam@gmail.com">bnickam@gmail.com</a></p>
+    <p>Phone: +91-9902879832</p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/barath-mn-21828b199" target="_blank">linkedin.com/in/barath-mn</a></p>
+  </section>
+
 </body>
 </html>
