Fix tab activation and include script

--- a/index.html
+++ b/index.html
@@ -73,5 +73,6 @@
     <p>LinkedIn: <a href="https://linkedin.com/in/barath-mn-21828b199" target="_blank">linkedin.com/in/barath-mn</a></p>
   </section>
 
+  <script src="script.js"></script>
 </body>
 </html>
