--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,17 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
   <header class="hero">
+    <img src="profile.jpg" alt="Barath MN" class="profile-photo" />
     <h1>BARATH MN</h1>
     <p class="subtitle">Product Manager · No-Code Builder · Digital Strategist</p>
     <p class="summary">
@@ -17,14 +26,14 @@
     <a class="btn" href="resume.pdf" download>Download Resume</a>
   </header>
 
-  <section class="section">
+  <section id="about" class="section">
     <h2>About Me</h2>
     <p>
       I'm passionate about using design thinking, low-code platforms, and data analytics to solve business problems at scale. I’ve delivered measurable outcomes by integrating Zoho, BigQuery, and AI workflows, and thrive in fast-paced, cross-functional teams.
     </p>
   </section>
 
-  <section class="section">
+  <section id="skills" class="section">
     <h2>Skills</h2>
     <ul>
       <li>Product Strategy · AI Prompt Engineering · Agile / Scrum</li>
@@ -35,7 +44,7 @@
     </ul>
   </section>
 
-  <section class="section">
+  <section id="experience" class="section">
     <h2>Experience</h2>
     <h3>Spacematrix Design Consultants Pvt Ltd <span class="date">(Nov 2023 – Present)</span></h3>
     <ul>
@@ -61,17 +70,18 @@
     </ul>
   </section>
 
-  <section class="section">
+  <section id="education" class="section">
     <h2>Education</h2>
     <p><strong>B.Tech in Electronics & Communication</strong> – CMR University, Bangalore (2020)</p>
   </section>
 
-  <section class="section">
+  <section id="contact" class="section">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:bnickam@gmail.com">bnickam@gmail.com</a></p>
     <p>Phone: +91-9902879832</p>
     <p>LinkedIn: <a href="https://linkedin.com/in/barath-mn-21828b199" target="_blank">linkedin.com/in/barath-mn</a></p>
   </section>
-
+  
+  <script src="script.js"></script>
 </body>
 </html>
